# CMake-sdl2-googletest

./: .clang-format  CMakeLists.txt  clang-format.cmake
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
